Fix height of adopters logo on mobile phones

--- a/assets/scss/custom/pages/_landing.scss
+++ b/assets/scss/custom/pages/_landing.scss
@@ -547,10 +547,9 @@ nav.navbar {
 }
 
 .adopters-card-icon img {
-    width: 100%;
-    height: auto;
+    width: auto;
+    height: 64px;
     max-height: 64px;
-    min-height: 64px;
 }
 
 /* Adopters section CSS end */
